--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -513,6 +513,7 @@ config MACH_LOONGSON64
 	select USE_OF
 	select BUILTIN_DTB
 	select PCI_HOST_GENERIC
+	select HAVE_ARCH_NODEDATA_EXTENSION if NUMA
 	help
 	  This enables the support of Loongson-2/3 family of machines.
 
@@ -709,6 +710,7 @@ config SGI_IP27
 	select WAR_R10000_LLSC
 	select MIPS_L1_CACHE_SHIFT_7
 	select NUMA
+	select HAVE_ARCH_NODEDATA_EXTENSION
 	help
 	  This are the SGI Origin 200, Origin 2000 and Onyx 2 Graphics
 	  workstations.  To compile a Linux kernel that runs on these, say Y
@@ -2706,6 +2708,9 @@ config NUMA
 	  disabled.
 
 config SYS_SUPPORTS_NUMA
+	bool
+
+config HAVE_ARCH_NODEDATA_EXTENSION
 	bool
 
 config RELOCATABLE
