arch: arm: configs: aspeed: enable crypto akcipher config
Enable crypto user api akcipher to support RSA hardware.

Signed-off-by: Neal Liu <neal_liu@aspeedtech.com>
Change-Id: I99cf174ba360492f0ee42c8d6a8cf4a441ded8a0

--- a/arch/arm/configs/aspeed_g6_defconfig
+++ b/arch/arm/configs/aspeed_g6_defconfig
@@ -390,6 +390,7 @@ CONFIG_CRYPTO_USER_API_HASH=y
 CONFIG_CRYPTO_USER_API_SKCIPHER=y
 CONFIG_CRYPTO_USER_API_RNG=y
 CONFIG_CRYPTO_USER_API_AEAD=y
+CONFIG_CRYPTO_USER_API_AKCIPHER=y
 CONFIG_CRYPTO_DEV_ASPEED=y
 # CONFIG_XZ_DEC_X86 is not set
 # CONFIG_XZ_DEC_POWERPC is not set
