clk: qcom: gdsc-regulator: Add snapshot from msm-5.15
Add gdsc-regulator snapshot from msm-5.15 commit 123f6f081248 ("Merge
"spi: spi-msm-geni: clear qn_err flag before transfer"").

Change-Id: I4d8989102564d0a6101bb54eb10055407531d61f
Signed-off-by: Mike Tipton <quic_mdtipton@quicinc.com>

--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -689,4 +689,13 @@ config CLK_GFM_LPASS_SM8250
 	  Support for the Glitch Free Mux (GFM) Low power audio
           subsystem (LPASS) clocks found on SM8250 SoCs.
 
+config QCOM_GDSC_REGULATOR
+	tristate "GDSC regulator driver"
+	depends on COMMON_CLK_QCOM
+	help
+	  This driver supports globally distributed switch controller (GDSC)
+	  devices in regulator framework.
+	  Say Y if you want to support clients using regulator framework APIs
+	  to control GDSCs.
+
 endif
