hwrng: aspeed: Add Aspeed HW RNG driver
Signed-off-by: Johnny Huang <johnny_huang@aspeedtech.com>
Change-Id: Ie62bed40dffabc2f586af621becb2177eacdf5e7

--- a/drivers/char/hw_random/Kconfig
+++ b/drivers/char/hw_random/Kconfig
@@ -538,6 +538,19 @@ config HW_RANDOM_ARM_SMCCC_TRNG
 	  To compile this driver as a module, choose M here: the
 	  module will be called arm_smccc_trng.
 
+config HW_RANDOM_ASPEED
+	tristate "Aspeed Random Number Generator support"
+	depends on ARCH_ASPEED
+	default HW_RANDOM
+	help
+	  This driver provides kernel-side support for the Random Number
+	  Generator hardware found on Aspeed ast2600 devices.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called atmel-rng.
+
+	  If unsure, say Y.
+
 endif # HW_RANDOM
 
 config UML_RANDOM
