--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -170,6 +170,7 @@ config SND_SOC_ALL_CODECS
 	imply SND_SOC_RT1011
 	imply SND_SOC_RT1015
 	imply SND_SOC_RT1015P
+	imply SND_SOC_RT1016
 	imply SND_SOC_RT1019
 	imply SND_SOC_RT1305
 	imply SND_SOC_RT1308
@@ -1245,6 +1246,10 @@ config SND_SOC_RT1015
 config SND_SOC_RT1015P
 	tristate
 	depends on GPIOLIB
+
+config SND_SOC_RT1016
+	tristate
+	depends on I2C
 
 config SND_SOC_RT1019
 	tristate
