--- a/drivers/phy/qualcomm/Kconfig
+++ b/drivers/phy/qualcomm/Kconfig
@@ -48,6 +48,30 @@ config PHY_QCOM_QMP
 	  Enable this to support the QMP PHY transceiver that is used
 	  with controllers such as PCIe, UFS, and USB on Qualcomm chips.
 
+config PHY_QCOM_UFS
+	tristate "Qualcomm Technologies, Inc. UFS PHY driver"
+	depends on OF && ARCH_QCOM
+	select GENERIC_PHY
+	help
+	  Enables support for UFS PHY on Qualcomm Technologies, Inc.
+	  chipsets.
+	  This driver together with the UFS PHY controller specific
+	  driver enables the UFS PHY support for Qualcomm Technologies, Inc.
+	  chips.
+
+if PHY_QCOM_UFS
+
+config PHY_QCOM_UFS_QRBTC_SDM845
+	tristate "Qualcomm Technologies, Inc. UFS Presil Phy Driver"
+	depends on PHY_QCOM_UFS && REGULATOR_STUB
+	help
+          Enable this to support UFS PHY on pre-silicon platforms.
+	  The support is restricted to HS-G1 only on both Tx and Rx.
+	  No low power mode support is present.
+	  Doesn't restrict number of lanes.
+
+endif
+
 config PHY_QCOM_QUSB2
 	tristate "Qualcomm QUSB2 PHY Driver"
 	depends on OF && (ARCH_QCOM || COMPILE_TEST)
