ARM: config: u8500: Re-enable AB8500 battery charging
This is effectively a revert of the temporary disablement
patch. Battery charging now works!

We also enable static battery data for the Samsung SDI
batteries as used by the U8500 Samsung phones.

Cc: Lee Jones <lee.jones@linaro.org>
Fixes: a1149ae97554 ("ARM: ux500: Disable Power Supply and Battery Management by default")
Signed-off-by: Linus Walleij <linus.walleij@linaro.org>

--- a/arch/arm/configs/u8500_defconfig
+++ b/arch/arm/configs/u8500_defconfig
@@ -84,6 +84,8 @@ CONFIG_SPI_GPIO=y
 CONFIG_SPI_PL022=y
 CONFIG_GPIO_STMPE=y
 CONFIG_GPIO_TC3589X=y
+CONFIG_BATTERY_SAMSUNG_SDI=y
+CONFIG_AB8500_BM=y
 CONFIG_SENSORS_IIO_HWMON=y
 CONFIG_SENSORS_NTC_THERMISTOR=y
 CONFIG_THERMAL=y
