arm: dts: aspeed-g6: add ahbc property to acry
Add ahbc property to acry device node.

Signed-off-by: Neal Liu <neal_liu@aspeedtech.com>
Change-Id: I3bbf0a685c8f83895a8dea98c0543dbab47fe74a

--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -1325,6 +1325,7 @@
 				interrupts = <GIC_SPI 160 IRQ_TYPE_LEVEL_HIGH>;
 				clocks = <&syscon ASPEED_CLK_GATE_RSACLK>;
 				clock-names = "rsaclk";
+				aspeed,ahbc = <&ahbc>;
 				status = "ok";
 			};
 
