--- a/arch/arm/boot/dts/aspeed-g6.dtsi
+++ b/arch/arm/boot/dts/aspeed-g6.dtsi
@@ -1695,6 +1695,7 @@
 		resets = <&syscon ASPEED_RESET_I3C0>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 102 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i3c1_default>;
@@ -1714,6 +1715,7 @@
 		resets = <&syscon ASPEED_RESET_I3C1>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 103 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i3c2_default>;
@@ -1733,6 +1735,7 @@
 		resets = <&syscon ASPEED_RESET_I3C2>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 104 IRQ_TYPE_LEVEL_HIGH>;
 		aspeed,scu = <&syscon>;
 
@@ -1750,6 +1753,7 @@
 		resets = <&syscon ASPEED_RESET_I3C3>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 105 IRQ_TYPE_LEVEL_HIGH>;
 		aspeed,scu = <&syscon>;
 
@@ -1767,6 +1771,7 @@
 		resets = <&syscon ASPEED_RESET_I3C4>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 106 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i3c5_default>;
@@ -1786,6 +1791,7 @@
 		resets = <&syscon ASPEED_RESET_I3C5>;
 		i2c-scl-hz = <400000>;
 		i3c-scl-hz = <12500000>;
+		sda-tx-hold = <1>;
 		interrupts = <GIC_SPI 107 IRQ_TYPE_LEVEL_HIGH>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_i3c6_default>;
