configs: aspeed-g6: Enable BMC devices over PCIe
Enable BMC devices (e.g. KCS) over PCIe.

Signed-off-by: Chia-Wei Wang <chiawei_wang@aspeedtech.com>
Change-Id: I86ad968afb3ba54c8cc31770b18f9f08c65de8da

--- a/arch/arm/configs/aspeed_g6_defconfig
+++ b/arch/arm/configs/aspeed_g6_defconfig
@@ -202,7 +202,6 @@ CONFIG_R8169=y
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_BROADCOM_PHY=y
-CONFIG_REALTEK_PHY=y
 # CONFIG_USB_NET_DRIVERS is not set
 # CONFIG_WLAN is not set
 CONFIG_INPUT_EVDEV=y
@@ -239,8 +238,8 @@ CONFIG_I2C_MUX_PCA9541=y
 CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_NEW_ASPEED=y
 CONFIG_I2C_FSI=y
-CONFIG_I2C_SLAVE_MQUEUE=y
 CONFIG_I2C_SLAVE_EEPROM=y
+CONFIG_I2C_SLAVE_MQUEUE=y
 CONFIG_I3C=y
 CONFIG_I3CDEV=y
 CONFIG_AST2600_I3C_MASTER=y
@@ -339,6 +338,8 @@ CONFIG_RTC_DRV_RV8803=y
 CONFIG_RTC_DRV_ASPEED=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_IOMMU_SUPPORT is not set
+CONFIG_ASPEED_BMC_DEV=y
+CONFIG_ASPEED_HOST_BMC_DEV=y
 CONFIG_ASPEED_VIDEO=y
 CONFIG_ASPEED_MCTP=y
 CONFIG_ASPEED_XDMA=y
@@ -403,6 +404,7 @@ CONFIG_DEBUG_INFO_REDUCED=y
 CONFIG_DEBUG_INFO_DWARF4=y
 CONFIG_GDB_SCRIPTS=y
 CONFIG_STRIP_ASM_SYMS=y
+CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_WX=y
 CONFIG_SCHED_STACK_END_CHECK=y
 CONFIG_PANIC_ON_OOPS=y
@@ -415,5 +417,4 @@ CONFIG_WQ_WATCHDOG=y
 CONFIG_DEBUG_LIST=y
 CONFIG_FUNCTION_TRACER=y
 CONFIG_DEBUG_USER=y
-CONFIG_DEBUG_FS=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
