--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1460,6 +1460,7 @@ dtb-$(CONFIG_ARCH_ASPEED) += \
 	aspeed-ast2600-pfr.dtb \
 	aspeed-ast2600-usbadp.dtb \
 	aspeed-ast2600-ncsi.dtb \
+	aspeed-ast2600-dcscm.dtb \
 	aspeed-bmc-amd-ethanolx.dtb \
 	aspeed-bmc-ampere-mtjade.dtb \
 	aspeed-bmc-arm-centriq2400-rep.dtb \
