interconnect: qcom: Add interconnect snapshot for Kalama SoC
Add Kalama interconnect driver snapshort from msm-5.15 branch with base
commit <a79cccfc9d06> (Merge "Revert "arm64: defconfig: Enable
QCOM_DYN_MINIDUMP_STACK for kalama"").

Change-Id: I1d0b556b28c5b8d41d68d58d6d729a61a84f6cfc
Signed-off-by: Vivek Aknurwar <quic_viveka@quicinc.com>
Signed-off-by: Huang Yiwei <quic_hyiwei@quicinc.com>

--- a/drivers/interconnect/qcom/Makefile
+++ b/drivers/interconnect/qcom/Makefile
@@ -20,6 +20,7 @@ qnoc-sm8250-objs			:= sm8250.o
 qnoc-sm8350-objs			:= sm8350.o
 qnoc-sm8450-objs			:= sm8450.o
 qnoc-pineapple-objs			:= pineapple.o
+qnoc-kalama-objs			:= kalama.o
 icc-smd-rpm-objs			:= smd-rpm.o icc-rpm.o
 qnoc-qos-obj				:= qnoc-qos.o
 
@@ -43,6 +44,7 @@ obj-$(CONFIG_INTERCONNECT_QCOM_SM8250) += qnoc-sm8250.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SM8350) += qnoc-sm8350.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SM8450) += qnoc-sm8450.o
 obj-$(CONFIG_INTERCONNECT_QCOM_PINEAPPLE) += qnoc-pineapple.o
+obj-$(CONFIG_INTERCONNECT_QCOM_KALAMA) += qnoc-kalama.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SMD_RPM) += icc-smd-rpm.o
 obj-$(CONFIG_INTERCONNECT_QCOM_QOS) += qnoc-qos.o
 obj-$(CONFIG_INTERCONNECT_QCOM_DEBUG) += icc-debug.o
