drivers: clk: Add clock controller snapshot for Kalama SoC
Add Kalama clock controller snapshot from msm-5.15 branch with base
commit <a79cccfc9d06> (Merge "Revert "arm64: defconfig:
Enable QCOM_DYN_MINIDUMP_STACK for kalama"").

Change-Id: I7822e2910d360a76611cf900da4f9533e0593114
Signed-off-by: Vivek Aknurwar <quic_viveka@quicinc.com>

--- a/drivers/clk/qcom/Makefile
+++ b/drivers/clk/qcom/Makefile
@@ -107,6 +107,13 @@ obj-$(CONFIG_SM_GCC_8450) += gcc-sm8450.o
 obj-$(CONFIG_SM_GCC_PINEAPPLE) += gcc-pineapple.o
 obj-$(CONFIG_SM_GPUCC_6350) += gpucc-sm6350.o
 obj-$(CONFIG_SM_CAMCC_PINEAPPLE) += camcc-pineapple.o
+obj-$(CONFIG_SM_GCC_KALAMA) += gcc-kalama.o
+obj-$(CONFIG_SM_VIDEOCC_KALAMA) += videocc-kalama.o
+obj-$(CONFIG_SM_CAMCC_KALAMA) += camcc-kalama.o
+obj-$(CONFIG_SM_DISPCC_KALAMA) += dispcc-kalama.o
+obj-$(CONFIG_SM_DEBUGCC_KALAMA) += debugcc-kalama.o
+obj-$(CONFIG_SM_GPUCC_KALAMA) += gpucc-kalama.o
+obj-$(CONFIG_SM_TCSRCC_KALAMA) += tcsrcc-kalama.o
 obj-$(CONFIG_SM_GPUCC_8150) += gpucc-sm8150.o
 obj-$(CONFIG_SM_GPUCC_8250) += gpucc-sm8250.o
 obj-$(CONFIG_SM_GPUCC_PINEAPPLE) += gpucc-pineapple.o
