--- a/drivers/clk/qcom/Kconfig
+++ b/drivers/clk/qcom/Kconfig
@@ -817,4 +817,67 @@ config QCOM_GDSC_REGULATOR
 	  Say Y if you want to support clients using regulator framework APIs
 	  to control GDSCs.
 
+config SM_GCC_KALAMA
+	tristate "Kalama Global Clock Controller"
+	depends on COMMON_CLK_QCOM
+	help
+	  Support for the global clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to use peripheral devices such as UART, SPI, I2C,
+	  USB, UFS, SD/eMMC, PCIe, etc.
+
+config SM_VIDEOCC_KALAMA
+	tristate "Kalama Video Clock Controller"
+	depends on SM_GCC_KALAMA
+	help
+	  Support for the video clock controller on Qualcomm Technologies, Inc.
+	  Kalama devices.
+	  Say Y if you want to support video devices and functionality such as
+	  video encode/decode.
+
+config SM_CAMCC_KALAMA
+	tristate "Kalama Camera Clock Controller"
+	depends on SM_GCC_KALAMA
+	help
+	  Support for the camera clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to support camera devices and functionality such as
+	  capturing pictures.
+
+config SM_DISPCC_KALAMA
+	tristate "Kalama Display Clock Controller"
+	depends on SM_GCC_KALAMA
+	help
+	  Support for the display clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to support display devices and functionality such as
+	  splash screen.
+
+config SM_DEBUGCC_KALAMA
+	tristate "Kalama Debug Clock Controller"
+	depends on COMMON_CLK_QCOM
+	help
+	  Support for the debug clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to support the debug clocks such as
+	  clock measurement functionality.
+
+config SM_GPUCC_KALAMA
+	tristate "Kalama Graphics Clock Controller"
+	depends on SM_GCC_KALAMA
+	help
+	  Support for the graphics clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to support graphics controller devices and
+	  functionality such as 3D graphics.
+
+config SM_TCSRCC_KALAMA
+	tristate "Kalama Top-Level CSR Clock Controller"
+	depends on SM_GCC_KALAMA
+	help
+	  Support for the TCSR clock controller on Qualcomm Technologies, Inc
+	  Kalama devices.
+	  Say Y if you want to support miscellaneous top-level clocks
+	  such as for the PHY references.
+
 endif
