--- a/drivers/iio/test/Kconfig
+++ b/drivers/iio/test/Kconfig
@@ -14,6 +14,6 @@ config IIO_RESCALE_KUNIT_TEST
 	  This takes advantage of ARCH=um to run tests and should be used by
 	  developers to tests their changes to the rescaling logic.
 
-config IIO_TEST_FORMAT
+config IIO_FORMAT_KUNIT_TEST
         bool "Test IIO formatting functions"
         depends on KUNIT=y
