--- a/arch/arm/mach-bcm/Kconfig
+++ b/arch/arm/mach-bcm/Kconfig
@@ -200,7 +200,7 @@ config ARCH_BRCMSTB
 	  including the 7445 family of chips.
 
 menuconfig ARCH_BCMBCA
-	bool "Broadcom Broadband SoC"
+	bool "Broadcom Broadband Carrier Access (BCA) origin SoC"
 	depends on ARCH_MULTI_V7
 	select ARM_AMBA
 	select ARM_GIC
