drivers:iio:stm:imu:st_asm330lhhx: Starting support asm330lhhx STMEMS IMU
Renamed st_asm330lhh driver to st_asm330lhhx, in order to include all
asm330lhh IMU device sensor family.

Signed-off-by: Mario Tesi <mario.tesi@st.com>
Change-Id: I98355a2050269eac4576d3e0a2d6243284c37387
Reviewed-on: https://gerrit.st.com/c/linuxandroidopen/stm-ldd-iio/+/260376
Tested-by: CITOOLS <MDG-smet-aci-reviews@list.st.com>
Reviewed-by: Denis CIOCCA <denis.ciocca@st.com>

--- a/drivers/iio/stm/imu/Makefile
+++ b/drivers/iio/stm/imu/Makefile
@@ -7,7 +7,7 @@
 obj-y += st_lsm6dsox/
 obj-y += st_lsm6dsrx/
 obj-y += st_ism330dhcx/
-obj-y += st_asm330lhh/
+obj-y += st_asm330lhhx/
 obj-y += st_imu68/
 obj-y += st_ism330dlc/
 obj-y += st_lsm6ds3/
